--- a/app/src/main/res/layout/activity_add_habit.xml
+++ b/app/src/main/res/layout/activity_add_habit.xml
@@ -1,6 +1,7 @@
 <!-- File: app/src/main/res/layout/activity_add_habit.xml -->
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout_add"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -17,14 +18,16 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             android:elevation="4dp"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            tools:ignore="MissingConstraints" />
 
         <!-- EditText for Habit Name -->
         <EditText
             android:id="@+id/editTextHabitName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Enter habit name"
+            android:autofillHints="Coding"
+            android:hint="@string/enter_habit_name"
             app:layout_constraintTop_toBottomOf="@id/toolbar_add"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -34,7 +37,7 @@
             android:id="@+id/buttonSave"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Save"
+            android:text="@string/save"
             app:layout_constraintTop_toBottomOf="@id/editTextHabitName"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -44,7 +47,7 @@
             android:id="@+id/buttonCancel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Cancel"
+            android:text="@string/cancel"
             app:layout_constraintTop_toBottomOf="@id/buttonSave"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
